fix jump effect on rhythmbox(3.4.8) play button

--- a/Lightningbug-Dark/gtk-3.0/gtk.css
+++ b/Lightningbug-Dark/gtk-3.0/gtk.css
@@ -5073,6 +5073,13 @@ terminal-window notebook > header.top > tabs > tab:checked {
   box-shadow: inset 0 -1px #12120d;
 }
 
+/************
+* Rhythmbox *
+************/
+toolbar > toolitem > box > button, .inline-toolbar > toolitem > box > button {
+  padding: 3px 6px;
+}
+
 .nemo-window .nemo-places-sidebar {
   border: none;
 }
