--- a/Lightningbug/gtk-3.0/gtk.css
+++ b/Lightningbug/gtk-3.0/gtk.css
@@ -5120,6 +5120,13 @@ terminal-window notebook > header.top > tabs > tab:checked {
   border-radius: 4px;
   caret-color: currentColor;
 }
+/************
+* Rhythmbox *
+************/
+toolbar > toolitem > box > button, .inline-toolbar > toolitem > box > button {
+  padding: 3px 6px;
+}
+
 .thunar .sidebar treeview.view:hover {
   background-color: rgba(241, 210, 40, 0.12);
   border-left: 4px solid #eecd15;
